Refactor backend: security, validation, audit logging, RBAC improvements